Style: fix nav from hiding about anchor, adjust spacing

--- a/main.css
+++ b/main.css
@@ -3,27 +3,29 @@
     margin: 0px;
     padding: 0px;
     font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    outline: 1px solid red;
-    ;
+    /* outline: 1px solid red; */
 }
 
 html {
-    min-height: 100vh;
     line-height: 1.5;
+    scroll-padding-top: 90px;
 
     background-color: #03032e;
 }
 
 body {
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-
-    height: 100%;
-    position: relative;
 }
 
+
 /* Navigation ******************************/
+.header {
+    position: sticky;
+    width: 100%;
+    top: 0;
+}
 
 .nav {
     display: flex;
@@ -31,19 +33,16 @@ body {
     align-items: center;
     flex: 1, 1, auto;
     padding: 0px 20px 0px 20px;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
 
     border-bottom: 2px solid #c9c9c9;
     background-color: #999999;
 }
 
-.main-logo {
+.nav-logo {
     height: 50px;
     border-radius: 40px;
-    padding-top: 5px;
+    margin-top: 5px;
+    padding: 5px;
 }
 
 .nav-links {
@@ -73,63 +72,56 @@ a:hover {
     color: #c9c9c9;
 }
 
-.social-logos {
-    height: 30px;
-    width: 30px;
-    margin: 0px 2px;
-}
-
-.social-logos:hover {
-    scale: 1.1;
-    transition: .3s;
-}
-
 /* Main ***********************************/
 
 .main {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin-top: 60px;
-    gap: 30px;
-    padding: 75px 75px 100px 50px;
+    padding: 40px;
+
 }
 
 .main-text {
-    display: block;
-    flex: 1 1 600px;
     max-width: 600px;
     min-height: 300px;
-    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 600px;
+    padding: 10px;
     margin-right: auto;
 
     color: #c9c9c9;
 }
 
 .about-me {
-    display: block;
-    flex: 2 1 600px;
     max-width: 900px;
-    padding: 40px;
-    margin-right: auto;
     min-height: 400px;
+    display: flex;
+    flex-direction: column;
+    flex: 2 1 600px;
+    margin-right: auto;
+    padding: 10px;
 
     color: #c9c9c9;
 }
 
 .test {
-    display: flex;
-    margin-top: 50px;
-    padding: 40px;
     min-height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    align-items: center;
+    padding: 10px;
 
     flex: 2 1 600px;
     color: #c9c9c9;
 }
 
 #name {
-    margin-top: -5px;
+    margin-left: -2px;
 
+    line-height: 1em;
     font-size: 3.2em;
     font-weight: 800;
 }
@@ -151,13 +143,25 @@ a:hover {
     justify-content: center;
     align-items: center;
     margin-top: auto;
-    bottom: 0;
+    gap: 10px;
 
     border-top: 1px solid #c9c9c9;
     background-color: #999999;
 }
 
+.social-logos {
+    height: 30px;
+    width: 30px;
+    margin: 0px 2px;
+}
+
+.social-logos:hover {
+    scale: 1.1;
+    transition: .3s;
+}
+
 #footer-text {
+    font-weight: 400;
     padding-right: 20px;
-    font-size: 10px;
+    font-size: 11px;
 }
